@@ -85,6 +85,7 @@ static int  _validate_config_nodes(List curr_block_list,
 static int _delete_old_blocks(List curr_block_list,
 			      List found_block_list);
 static int _post_block_free(bg_record_t *bg_record, bool restore);
+static void *_track_freeing_blocks(void *args);
 static void *_wait_and_destroy_block(void *args);
 static char *_get_bg_conf(void);
 static int  _reopen_bridge_log(void);
@@ -589,7 +590,7 @@ extern int bg_free_block(bg_record_t *bg_record, bool wait, bool locked)
 }
 
 /* block_state_mutex should be unlocked before calling this */
-extern int free_block_list(uint32_t job_id, List track_list,
+extern int free_block_list(uint32_t job_id, List track_in_list,
 			   bool destroy, bool wait)
 {
 	bg_record_t *bg_record = NULL;
@@ -597,11 +598,12 @@ extern int free_block_list(uint32_t job_id, List track_list,
 	ListIterator itr = NULL;
 	int track_cnt = 0, free_cnt = 0, retry_cnt = 0, rc = SLURM_SUCCESS;
 	bool restore = true;
-
-	if (!track_list || !(track_cnt = list_count(track_list)))
+	List track_list = list_create(NULL);
+	if (!track_in_list || !(track_cnt = list_count(track_in_list)))
 		return SLURM_SUCCESS;
 
 	slurm_mutex_lock(&block_state_mutex);
+	list_transfer(track_list, track_in_list);
 	itr = list_iterator_create(track_list);
 	while ((bg_record = list_next(itr))) {
 		if (bg_record->magic != BLOCK_MAGIC) {
@@ -655,9 +657,25 @@ extern int free_block_list(uint32_t job_id, List track_list,
 	}
 	slurm_mutex_unlock(&block_state_mutex);
 
-	/* _wait_and_destroy_block should handle cleanup so just return */
+	/* _wait_and_destroy_block should handle cleanup, but we
+	 * should start a thread just to make sure we have current
+	 * states, then just return */
 	if (!wait) {
+		pthread_attr_t attr_agent;
+		pthread_t thread_agent;
+		slurm_attr_init(&attr_agent);
 		list_iterator_destroy(itr);
+		retries = 0;
+		while (pthread_create(&thread_agent, &attr_agent,
+				      _track_freeing_blocks,
+				      track_list)) {
+			error("pthread_create error %m");
+			if (++retries > MAX_PTHREAD_RETRIES)
+				fatal("Can't create "
+				      "pthread");
+			/* sleep and retry */
+			usleep(1000);
+		}
 		return SLURM_SUCCESS;
 	}
 
@@ -667,13 +685,17 @@ extern int free_block_list(uint32_t job_id, List track_list,
 	while (retry_cnt < MAX_FREE_RETRIES) {
 		free_cnt = 0;
 		slurm_mutex_lock(&block_state_mutex);
-		if (!blocks_are_created)
-			update_block_list_state(track_list);
+		/* just to make sure state is updated */
+		update_block_list_state(track_list);
 		list_iterator_reset(itr);
+		/* just incase things change */
+		track_cnt = list_count(track_list);
 		while ((bg_record = list_next(itr))) {
 			if ((bg_record->state == RM_PARTITION_FREE)
 			    || (bg_record->state == RM_PARTITION_ERROR))
 				free_cnt++;
+			else if (bg_record->state != RM_PARTITION_DEALLOCATING)
+				bg_free_block(bg_record, 0, 1);
 		}
 		slurm_mutex_unlock(&block_state_mutex);
 		if (free_cnt == track_cnt)
@@ -711,6 +733,7 @@ extern int free_block_list(uint32_t job_id, List track_list,
 	slurm_mutex_unlock(&block_state_mutex);
 	last_bg_update = time(NULL);
 	list_iterator_destroy(itr);
+	list_destroy(track_list);
 
 	return rc;
 }
@@ -1612,6 +1635,43 @@ static int _post_block_free(bg_record_t *bg_record, bool restore)
 		info("_post_block_free: destroyed");
 
 	return SLURM_SUCCESS;
+}
+
+
+static void *_track_freeing_blocks(void *args)
+{
+	List track_list = (List)args;
+	int retry_cnt = 0;
+	int free_cnt = 0, track_cnt = list_count(track_list);
+	ListIterator itr = list_iterator_create(track_list);
+	bg_record_t *bg_record;
+
+	debug("_track_freeing_blocks: Going to free %d", track_cnt);
+	while (retry_cnt < MAX_FREE_RETRIES) {
+		free_cnt = 0;
+		slurm_mutex_lock(&block_state_mutex);
+		update_block_list_state(track_list);
+		list_iterator_reset(itr);
+		/* just incase this changes from the update function */
+		track_cnt = list_count(track_list);
+		while ((bg_record = list_next(itr))) {
+			if ((bg_record->state == RM_PARTITION_FREE)
+			    || (bg_record->state == RM_PARTITION_ERROR))
+				free_cnt++;
+		}
+		slurm_mutex_unlock(&block_state_mutex);
+		if (free_cnt == track_cnt)
+			break;
+		debug("_track_freeing_blocks: freed %d of %d for",
+		      free_cnt, track_cnt);
+		sleep(FREE_SLEEP_INTERVAL);
+		retry_cnt++;
+	}
+	debug("_track_freeing_blocks: Freed them all");
+
+	list_iterator_destroy(itr);
+	list_destroy(track_list);
+	return NULL;
 }
 
 /* This should only be called from a thread */
